[gd_scene load_steps=5 format=3 uid="uid://5j3y1liryoop"]

[ext_resource type="PackedScene" uid="uid://cyphsaqnrmk37" path="res://Scenes/flappy.tscn" id="1_23vhc"]
[ext_resource type="Script" path="res://Scripts/game.gd" id="1_dcwhs"]
[ext_resource type="PackedScene" uid="uid://dikws3tnb5see" path="res://Scenes/ground.tscn" id="4_lhi5m"]
[ext_resource type="Script" path="res://Scripts/points.gd" id="5_1x5cy"]

[node name="Game" type="Node2D"]
script = ExtResource("1_dcwhs")

[node name="BackGround" type="ColorRect" parent="."]
offset_right = 864.0
offset_bottom = 937.0
color = Color(0.557706, 0.935996, 0.945406, 1)

[node name="PointUI" type="Label" parent="."]
unique_name_in_owner = true
z_index = 3
offset_left = 409.0
offset_top = 9.0
offset_right = 449.0
offset_bottom = 92.0
theme_override_colors/font_color = Color(0.854469, 0.374895, 0.298327, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 60
text = "0"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("5_1x5cy")

[node name="Flappy" parent="." instance=ExtResource("1_23vhc")]
position = Vector2(68, 393)

[node name="DifficultyTimer" type="Timer" parent="."]
wait_time = 5.224
autostart = true

[node name="PipeSpawnTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 3.038

[node name="Ground" parent="." instance=ExtResource("4_lhi5m")]
unique_name_in_owner = true
z_index = 1
position = Vector2(864, 858)

[connection signal="timeout" from="DifficultyTimer" to="." method="_on_difficulty_timer_timeout"]
[connection signal="timeout" from="PipeSpawnTimer" to="." method="_on_timer_timeout"]
